--- a/components/navbar/Nav.module.css
+++ b/components/navbar/Nav.module.css
@@ -20,6 +20,7 @@
     position: absolute;
     top:-5px;
     cursor: pointer;
+    margin-top: 10px;
     left: 40px;
     width:180px;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
